--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -713,7 +713,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="text-decoration: underline;">Sprite texture</span><br>
       <br>
       Sprite don't draw if sprite texture don't exist. Sprite texture will
-      automatically when load or clone sprite.</big><big> </big>
+      automatically create when load or clone sprite.</big><big> </big>
     <h2><a class="mozTocH2" name="mozTocId146800"></a><big>Chapter 7. Tile-set</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Some words about complex
@@ -1998,7 +1998,7 @@ Multimedia API</a>. </big>
         5.0.9 – 5.2 – Experimental branch.<br>
         5.2.1 – Small changes.<br>
         5.2.2 – Text drawing subsystem improved.<br>
-        5.2.3 – 5.2.4 – Small changes.<br>
+        5.2.3 – 5.2.5 – Small changes.<br>
       </big></span>
   </body>
 </html>
