Changes in the engine API

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -823,8 +823,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="text-decoration: underline;">How draw a text?</span><br>
       <br>
       Just use text subsystem for draw a text. This subsystem need a font for
-      text drawing. You must load a font before start draw the text. The font
-      is just tile-set with 16 rows and 16 columns.<br>
+      text drawing. You must load a font before start draw the text. The font is
+      just tile-set with 16 rows and 16 columns.<br>
       <br>
       <span style="text-decoration: underline;">Valid characters</span><br>
       <br>
@@ -1040,8 +1040,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       random number generator. It don't takes arguments.<br>
       <br>
       <span style="font-style: italic;">get_random</span> function return a
-      random value between zero and maximum. It takes the maximum as argument.<span
-        style="font-style: italic;"></span><br>
+      random value between zero and maximum. It takes the maximum as argument.<br>
+      <br>
+      <span style="font-style: italic;">get_texture_size</span> function return
+      maximum width or height of texture. It don't takes argument.<br>
     </big>
     <h2><a class="mozTocH2" name="mozTocId573582"></a><big>Chapter 3. Resource
         manager</big></h2>
@@ -1999,6 +2001,7 @@ Multimedia API</a>. </big>
         5.2.1 – Small changes.<br>
         5.2.2 – Text drawing subsystem improved.<br>
         5.2.3 – 5.2.5 – Small changes.<br>
+        5.2.6 – Changes in the engine API.<br>
       </big></span>
   </body>
 </html>
