Background subsystem and base sprite subsystem improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -534,13 +534,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;">void Background::load_background(Image
         *background);</span> – Load normal background.<br>
       <span style="font-style: italic;">void Background::load_background(Image
-        &amp;background);</span> – Load normal background.<br>
-      <span style="font-style: italic;">void Background::horizontal_mirror();</span>&nbsp;
-      – Do horizontal background mirror.<br>
-      <span style="font-style: italic;">void Background::vertical_mirror();</span>
-      – Do vertical background mirror.<br>
-      <span style="font-style: italic;">void Backgrround::complex_mirror();</span>
-      – Do both horizontal and vertical background mirror.<br>
+        &amp;background);</span> – Load normal background.<span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">void Background::draw_background();</span>
       – Draw a background.<br>
       <span style="font-style: italic;">void Background::destroy_background();</span>
@@ -1752,7 +1746,6 @@ Multimedia API</a>. </big>
           predefined constants. You can see it bellow.</big></p>
       <big> </big>
       <table style="text-align: left; width: 519px; height: 94px;" cellspacing="2"
-
         cellpadding="2" border="1">
         <tbody>
           <tr>
@@ -2018,7 +2011,10 @@ Multimedia API</a>. </big>
         5.4 – 5.4.1 – Small changes.<br>
         5.4.2 – 5.4.5 – Text drawing subsystem improved.<br>
         5.4.6 – 5.5.2 – Background subsystem improved.<br>
-        5.5.3 – Small changes.<br>
+        5.5.3 – 5.5.7 – Small changes.<br>
+        5.5.8 – Background subsystem improved.<br>
+        5.5.9 – Base sprite subsystem improved.<br>
+        5.6 – 5.6.2 – Small changes.<br>
       </big></span>
   </body>
 </html>
