--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -507,7 +507,11 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         </tr>
       </tbody>
     </table>
-    <big><br style="text-decoration: underline;">
+    <big><br>
+      <span style="text-decoration: underline;">Frame indexing</span><br>
+      <br>
+      Frame indexing start at 0.<br>
+      <br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Work with background</span><br>
       <br>
       Just use <span style="font-style: italic;">Background</span> class for
@@ -674,6 +678,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         </tr>
       </tbody>
     </table>
+    <big><br>
+    </big><big><span style="text-decoration: underline;">Frame indexing</span><br>
+      <br>
+      Frame indexing start at 0.</big><br>
     <big><br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Work with sprites</span><br>
       <br>
@@ -732,12 +740,11 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       <span style="text-decoration: underline;">Matrix access to frame</span><br>
       <br>
-      First row index is 1. First column index is 1.<br>
+      Row indexing start at 0. Column indexing start at 0.<br>
       <br>
     </big><big><span style="text-decoration: underline;">Simple access to frame</span><br>
       <br>
-      First frame index is 1. Last frame index is multiplication rows by
-      columns.<br>
+      Frame indexing start at 0.<br>
       <br style="text-decoration: underline;">
     </big><big> <span style="text-decoration: underline;">Work with sprite
         sheet subsystem</span><br>
@@ -2014,7 +2021,7 @@ Multimedia API</a>. </big>
         5.5.3 – 5.5.7 – Small changes.<br>
         5.5.8 – Background subsystem improved.<br>
         5.5.9 – Base sprite subsystem improved.<br>
-        5.6 – 5.6.2 – Small changes.<br>
+        5.6 – 5.6.4 – Small changes.<br>
       </big></span>
   </body>
 </html>
