--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -2021,6 +2021,7 @@ Multimedia API</a>. </big>
         5.6.9 – Small changes.<br>
         5.7 – Text drawing subsystem improved.<br>
         5.7.1 – 5.7.2 – Sprite sheet subsystem improved.<br>
+        5.7.3 – 5.7.4 – Small changes.<br>
       </big></span>
   </body>
 </html>
