--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -2022,7 +2022,8 @@ Multimedia API</a>. </big>
         5.7 – Text drawing subsystem improved.<br>
         5.7.1 – 5.7.2 – Sprite sheet subsystem improved.<br>
         5.7.3 – 5.7.4 – Small changes.<br>
-        5.7.4 – 5.7.5 – Resource manager improved.<br>
+        5.7.5 – 5.7.6 – Resource manager improved.<br>
+        5.7.7 – 5.7.8 – Small changes.<br>
       </big></span>
   </body>
 </html>
