--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -803,13 +803,13 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         Load a font.</span><br>
       <span style="font-style: italic;">void Text::draw_character(const char
         target); – Draw single character at current position.</span><br>
-      <span style="font-style: italic;">void Text::draw_text(const char *text);
+      <span style="font-style: italic;">void Text::draw_text(const char *target);
         – Draw text at current position.</span><br>
       <span style="font-style: italic;">void Text::draw_character(const unsigned
         int x,const unsigned int y,const char target);</span> – Draw single
       character at specific position.<br>
       <span style="font-style: italic;">void Text::draw_text(const unsigned int
-        x,const unsigned int y,const char *text);</span> – Draw text at specific
+        x,const unsigned int y,const char *target);</span> – Draw text at specific
       position.<br>
       <span style="font-style: italic;">void Text::destroy_image();</span> –
       Destroy a font image.<br>
@@ -2023,7 +2023,7 @@ Multimedia API</a>. </big>
         5.7.1 – 5.7.2 – Sprite sheet subsystem improved.<br>
         5.7.3 – 5.7.4 – Small changes.<br>
         5.7.5 – 5.7.6 – Resource manager improved.<br>
-        5.7.7 – 5.7.8 – Small changes.<br>
+        5.7.7 – 5.7.9 – Small changes.<br>
       </big></span>
   </body>
 </html>
